tests/negative/regression/r34.orng
// r34.orng:6:17: error: expected a value of type `Type`, got a value of type `()->Int`
//     let a: &main
//                ^
// 
fn main() -> Int {
    let a: &main
} 
